# pico_gg_lcd

./: .gitignore  .gitmodules  LICENCE  README.md
hw/: GG_LCD_DIY-cache.lib  GG_LCD_DIY.kicad_pcb  GG_LCD_DIY.kicad_prl  GG_LCD_DIY.kicad_pro  GG_LCD_DIY.kicad_sch  GG_LCD_DIY.pro  Pico_GG_LCD.kicad_pcb  Pico_GG_LCD.kicad_prl  Pico_GG_LCD.kicad_pro  Pico_GG_LCD.kicad_sch  Pico_GG_LCD.sch  Pico_GG_LCD.xml  fp-info-cache  sym-lib-table
hw/KiCad-RP-Pico-main/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
hw/jlcpcb/: project.db
hw/jlcpcb/gerber/: GG_LCD_DIY-CuBottom.gbr  GG_LCD_DIY-CuIn1.gbr  GG_LCD_DIY-CuIn2.gbr  GG_LCD_DIY-CuTop.gbr  GG_LCD_DIY-EdgeCuts.gbr  GG_LCD_DIY-MaskBottom.gbr  GG_LCD_DIY-MaskTop.gbr  GG_LCD_DIY-NPTH.drl  GG_LCD_DIY-PTH.drl  GG_LCD_DIY-PasteBottom.gbr  GG_LCD_DIY-PasteTop.gbr  GG_LCD_DIY-SilkBottom.gbr  GG_LCD_DIY-SilkTop.gbr  GG_LCD_DIY-VScore.gbr  Pico_GG_LCD-CuBottom.gbr  Pico_GG_LCD-CuIn1.gbr  Pico_GG_LCD-CuIn2.gbr  Pico_GG_LCD-CuTop.gbr  Pico_GG_LCD-EdgeCuts.gbr  Pico_GG_LCD-MaskBottom.gbr  Pico_GG_LCD-MaskTop.gbr  Pico_GG_LCD-NPTH.drl  Pico_GG_LCD-PTH.drl  Pico_GG_LCD-PasteBottom.gbr  Pico_GG_LCD-PasteTop.gbr  Pico_GG_LCD-SilkBottom.gbr  Pico_GG_LCD-SilkTop.gbr  Pico_GG_LCD-VScore.gbr
hw/jlcpcb/production_files/: BOM-GG_LCD_DIY.csv  BOM-Pico_GG_LCD.csv  CPL-GG_LCD_DIY.csv  CPL-Pico_GG_LCD.csv
sw/: CMakeLists.txt  build.sh
sw/src/: gg_capture.pio  lcd_send.pio  main.c
sw/src/libdvi/: Makefile  cmake_install.cmake  dvi.c  dvi.h  dvi_config_defs.h  dvi_timing.c  dvi_timing.h
